--- a/SNS/App.config
+++ b/SNS/App.config
@@ -5,6 +5,6 @@
     <add key="FTP.PortNumber" value=""/>
     <add key="FTP.UserName" value="LOGSYS"/>
     <add key="FTP.Password" value ="logsys3004!"/>
-    <add key="FTP.DownLoadPath" value="C:\LOG_FILE"/>
+    <add key="FTP.DownLoadPath" value="C:/LOG_FILE/"/>
   </appSettings>
 </configuration>
