--- a/SNS/App.config
+++ b/SNS/App.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="FTP_URL" value="ftp://192.168.34.19/LOG_FILE/"/>
-    <add key="FTP.PortNumber" value=""/>
+    <add key="FTP_URL" value="192.168.34.19"/>
+    <add key="FTP.PortNumber" value="21"/>
     <add key="FTP.UserName" value="LOGSYS"/>
     <add key="FTP.Password" value ="logsys3004!"/>
-    <add key="FTP.DownLoadPath" value="C:/LOG_FILE/"/>
+    <add key="FTP.DownLoadPath" value="C:"/>
   </appSettings>
 </configuration>
