--- a/SNS/App.config
+++ b/SNS/App.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+  <connectionStrings>
+    <add name ="SNSDB" providerName="SNS.Data.MsSqlHelper" connectionString="Data Source=192.168.34.11;Initial Catalog=SNSDB;User ID=sa;Password=1234;"/>
+  </connectionStrings>
   <appSettings>
     <add key="FTP_URL" value="192.168.34.19"/>
     <add key="FTP.PortNumber" value="21"/>
