--- a/SNS/SNS.csproj
+++ b/SNS/SNS.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E9185257-7BB5-4E16-A444-74A29F02C5F2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SNS</RootNamespace>
     <AssemblyName>SNS</AssemblyName>
@@ -49,7 +49,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="MainApp.cs" />
+    <Compile Include="Controller\ControlManager.cs" />
+    <Compile Include="Data\FileHelper.cs" />
+    <Compile Include="Data\IDBHelper.cs" />
+    <Compile Include="Data\MsSqlHelper.cs" />
+    <Compile Include="MainApp.cs" />
     <Compile Include="Net\FTPHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -59,6 +63,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DataObject\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\WinSCP.5.13.3\build\WinSCP.targets" Condition="Exists('..\packages\WinSCP.5.13.3\build\WinSCP.targets')" />
