--- a/SNS/App.config
+++ b/SNS/App.config
@@ -1,12 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name ="SNSDB" providerName="SNS.Data.MsSqlHelper" connectionString="Data Source=192.168.34.11;Initial Catalog=SNSDB;User ID=sa;Password=1234;"/>
+    <add name="SNSDB" providerName="SNS.Data.MsSqlHelper" connectionString="Data Source=192.168.34.11;Initial Catalog=SNSDB;User ID=sa;Password=1234;"/>
   </connectionStrings>
   <appSettings>
     <add key="FTP_URL" value="192.168.34.19"/>
     <add key="FTP.PortNumber" value="21"/>
     <add key="FTP.UserName" value="LOGSYS"/>
-    <add key="FTP.Password" value ="logsys3004!"/>    
+    <add key="FTP.Password" value="logsys3004!"/>
+    <add key ="SF_PAKAGE_PATH" value ="SNS.DataObject.SF"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
